FIX: navbar center align for responsive

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -66,6 +66,7 @@
     justify-content: center;
   }
   .link-text {
+    display: none;
     text-indent: -9999px;
   }
 }
